--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -158,10 +158,11 @@ p , span{
 		margin: 3%;
 	}
 	.price-content >a {
-		height: 94px;
-		width: 182px;
-		line-height: 94px;
-	}
+    height: 50px;
+    width: 140px;
+    line-height: 50px;
+    font-size: 2rem;
+}
 }
 @media screen and (max-width :284px){
 	.price-content >a {
