--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,20 @@
 		transform: translateY(0);
 		}
 	}
+
+/* topへ戻る */
+		#page_top {
+			position: fixed;
+			bottom: 30px;
+			right: 20px;
+			width: 10vw;
+			z-index: 1;
+		}
+
+		
+		.toplogo{
+			width: 100%;
+		}
 /* header/header-left/header-right common.cssに記載*/
 
 
@@ -88,7 +102,7 @@
 
 .detail-3 p{
 	font-size: 23px;
-	text-align: center;
+	padding-left: 32%;
 }
 
 
@@ -388,6 +402,12 @@ display: none;
 .room-description{
 	margin: 5%;
 }
+/* room */
+.bgimg-slider_2{
+	height: 25vh;
+	object-fit: contain;
+}
+
 /* アクセス  */
 .access-detail{
 	flex-direction: column;
