--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -356,7 +356,7 @@ input[type="submit"]:hover {
 @media screen and (max-width :767px){
 	/* Loading */
 	#splash_logo img {
-		width: 65%;
+		width: 	100%;
 	}
 	/* topへ戻る */
 	#page_top {
@@ -381,19 +381,34 @@ input[type="submit"]:hover {
 }
 
 .detail-1 >p, .detail-2 >p {
-	font-size: 40px;
+	font-size: 75px;
 	text-shadow: 3px 2px 0  #333333;;
 	font-weight: 600;
 	padding-left:0;
 	text-align:center;
 }
 .detail-3 >p{
-	font-size: 20px;
+	font-size: 23px;
+	color: #f2cf01;
+	text-align: center;
+	padding: 0;
 }
+
 /* about */
+.icon_1{
+	width: 11%;
+	left: 1%;
+}
+
+
+.icon_2 {
+	width: 10%;
+	left: 89%;
+}
+
 .video-content >iframe{
-	width: 90%;
-	height: 30vw;
+	width: 100%;
+	height: 30vh;
 }
 
 .floor_plan{
@@ -412,7 +427,13 @@ display: none;
 	height: 25vh;
 	object-fit: contain;
 }
-
+.inside-description {
+	padding: 3px;
+}
+.inside-description_2 {
+	width: 100%;
+	font-size: 14px;
+}
 /* アクセス  */
 .access-detail{
 	flex-direction: column;
@@ -433,5 +454,10 @@ display: none;
 	width: 85%;
 }
 
+input[type="submit"] {
+	font-size: 3.3rem;
+	padding: 7.5% 3.5%;
+	width: 43%;
+}
 }
 
